@@ -3,6 +3,7 @@
 2.dec (mi)
       - replaced use of Text() element for tablature duration symbols
         with specific TAB_DURATION_SYMBOL element
+      - changed Symbol::draw() to avoid drawing note dots in tablatures
 1.dec (mi)
       - moved tablature visual config. from Tablature() to StaffTypeTablature()
 1.dec (ws)
